Actually fixed bug - Anchor points on smaller devices do not work as expected

--- a/assets/styles/layout_general.css
+++ b/assets/styles/layout_general.css
@@ -199,7 +199,9 @@
 /* ============================================== */
 
     .anchor{
-        margin-bottom: var(--space-4);
+        position: relative;
+        top: calc((var(--height-header) + 16px) * -1);
+
     }
     
 
